tests/variables/valid/multiple_vars.su
s32 main() {
    s32 a = 1;
    s32 b = 2;
    return a + b;
}