tests/variables/invalid/redefine.su
s32 main() {
    s32 a = 1;
    s32 a = 2;
    return a;
}